tests/ui/consts/constifconst-call-in-const-position.stderr
error[E0080]: evaluation of `foo::<()>::{constant#0}` failed
  --> $DIR/constifconst-call-in-const-position.rs:17:38
   |
LL | const fn foo<T: ~const Tr>() -> [u8; T::a()] {
   |                                      ^^^^^^ calling non-const function `<() as Tr>::a`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
